# test-pandoc-stuff

./: Makefile.am  configure.ac  fabric.7  fabric.7.md  md2nroff.py
.github/workflows/: automerge_completed_pull_requests.yml  cherry-pick-checker.json  cherry-pick-checker.py  cherry-pick.yml  ci.yml  find-pr-bot-retest.py  git-commit-checks.py  git-commit-checks.yml  make_pull_requests.yml  man_page_pandoc.yml
man/: MPI_Finalize.3.md  MPI_Init.3.md  Makefile.am
scripts/: fake_pandoc.sh  md2nroff.py
